name:
  pregame
version:
  1.0.0
synopsis:
  Prelude counterpart
description:
  Excessive Prelude styled imports.
homepage:
  https://github.com/jxv/pregame
license:
  MIT
license-file:
  LICENSE
author:
  Joe Vargas
maintainer:
  https://github.com/jxv
copyright:
  2014-2016
category:
  Prelude
build-type:
  Simple
cabal-version:
  >=1.18

source-repository head
    type: git
    location: https://github.com/jxv/pregame.git

library
  exposed-modules:
    Pregame
  default-extensions:
    NoImplicitPrelude
  build-depends:
      aeson
    , array
    , base >=4.7 && <5.0
    , bytestring
    , containers
    , data-default
    , either
    , integer-gmp
    , lens
    , megaparsec
    , mtl
    , pointed
    , safe
    , semigroups
    , stm
    , text
    , text-conversions
    , time
    , tuple
    , unordered-containers
    , vector
  hs-source-dirs:
    src
  default-language:
    Haskell2010
